--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="content">
         <h1>The Sky Is the Limit</h1>
         <p>We provide world class financial assistance</p>
-        <a href="#about" class="btn"
+        <a href="#about" class="btn btn-primary"
           ><i class="fas fa-chevron-right"></i> Read More</a
         >
       </div>
