--- a/index.html
+++ b/index.html
@@ -42,5 +42,69 @@
         >
       </div>
     </header>
+
+    <main>
+      <!-- About: Icons -->
+      <section id="about" class="icons bg-light">
+        <div class="flex-items">
+          <div>
+            <i class="fas fa-university fa-2x"></i>
+            <div>
+              <h3>Investment Banking</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Recusandae, alias.
+              </p>
+            </div>
+          </div>
+          <div>
+            <i class="fas fa-book-reader fa-2x"></i>
+            <div>
+              <h3>Portfolio Manager</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Recusandae, alias.
+              </p>
+            </div>
+          </div>
+          <div>
+            <i class="fas fa-pencil-alt fa-2x"></i>
+            <div>
+              <h3>Tax & Custodial</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Recusandae, alias.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- About: Solutions -->
+      <section class="solutions flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="images/home/people.jpg" alt="People" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-primary">
+              <h4>What you are looking for</h4>
+              <h2>We provide bespoke solutions</h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Quisquam fugit, veniam molestiae earum distinctio, quas eveniet
+                ipsam rerum consectetur nam animi reprehenderit dolores ad!
+                Neque officiis iste eos assumenda quibusdam.
+              </p>
+              <a href="#" class="btn btn-primary btn-outline"
+                ><i class="fas fa-chevron"></i> Read More</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
